Fixed issue with vocab list card footer alignment.

--- a/src/styles/controls/_buttons.scss
+++ b/src/styles/controls/_buttons.scss
@@ -1,4 +1,3 @@
-
 button {
   display: flex;
   flex-direction: column;
@@ -11,12 +10,12 @@ button {
 }
 
 .primary {
-  color: var(--foreground-light);
+  color: var(--foreground-primary);
   background-color: var(--primary);
 }
 
 .secondary {
-  color: var(--foreground-dark);
+  color: var(--foreground-secondary);
   background-color: var(--secondary);
 }
 
@@ -41,7 +40,7 @@ button.large {
 }
 
 button:hover:enabled {
-  color: var(--foreground-light);
+  color: var(--foreground-secondary);
   background-color: var(--secondary-variant-dark);
 }
 
